# python-clean-arch-de

./: LIESMICH.md  README.md  cam-basic.yaml  cam-slides.yaml  cam.yaml
examples/GraspAdventure/: .bumpversion.cfg  .gitignore  README.md  setup.cfg  tox.ini
examples/GraspAdventure/src/grasp_adventure/: __main__.py
examples/GraspAdventure/src/grasp_adventure/data/: locations.py  objects.py  players.py
examples/GraspAdventure/src/grasp_adventure/v1/: location.py  world.py
examples/GraspAdventure/tests/: main_test.py
examples/GraspAdventure/tests/v1/: test_location_v1.py  test_world_v1.py
examples/GraspAdventure/tests/v2a/: test_location_v2a.py  test_world_v2a.py
examples/GraspAdventure/tests/v2b/: test_location_v2b.py  test_world_v2b.py
examples/GraspAdventure/tests/v2c/: test_location_v2c.py  test_world_factory_2c.py  test_world_v2c.py
examples/GraspAdventure/tests/v3a/: test_location_v3a.py  test_pawn_v3a.py  test_world_factory_3a.py  test_world_v3a.py
examples/GraspAdventure/tests/v3b/: test_location_v3b.py  test_pawn_v3b.py  test_world_factory_3b.py  test_world_v3b.py
examples/GraspAdventure/tests/v3c/: test_action_v3c.py  test_location_v3c.py  test_pawn_v3c.py  test_world_factory_3c.py  test_world_v3c.py
examples/GraspAdventure/tests/v4/: fixtures_v4.py  test_action_v4.py  test_game_factory_v4.py  test_location_v4.py  test_pawn_v4.py  test_player_v4.py
examples/GraspAdventure/tests/v5/: fixtures_v5.py  test_action_v5.py  test_game_factory_v5.py  test_game_object_v5.py  test_location_v5.py  test_pawn_v5.py  test_player_v5.py
(+504 files in other folders)
