[metadata]
name = grasp_adventure
version = 0.0.1
author = Dr. Matthias Hölzl
author_email = tc@xantira.com
description = A simple adventure game demonstrating GRASP (and other) patterns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/GraspAdventure/
project_urls =
    Bug Tracker = https://github.com/hoelzl/GraspAdventure/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8


[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    grasp-adventure = grasp_adventure.__main__:main